--- a/views/foglalas.ejs
+++ b/views/foglalas.ejs
@@ -22,7 +22,7 @@
         </form>
 
         <% errors.forEach(element => { %>
-            <p><%= element%></p>
+            <p style="color: red;"><%= element%></p>
         <% }); %>
     </main>
     </body>
